# gcxp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.md  README.md  bitbucket-pipelines.yml
.github/workflows/: build-and-test.yml
consumer/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/gcxp/: CMakeLists.txt  codec.h  exception.h  message.h  stream.h
producer/: CMakeLists.txt  main.cpp
share/: Dockerfile
tools/: analysis.sh  build-test.sh  coverage.sh  describe.sh  files2cpp.sh  makestr.sh  mkversion.sh  reformat.sh
unit/: CMakeLists.txt  codec.cpp  exception.cpp  main.cpp  message.cpp  stream.cpp  unit.cpp
